# cpp_record

./: .gitignore  CMakeLists.txt  README.md
src/: record.cpp
